<resources>
    <string name="txt_get_verified">By "Getting Verified", you can:</string>
    <string name="txt_verified_title">Get\nVerified</string>
    <string name="txt_verified_content_1">See better people in snapshots</string>
    <string name="txt_verified_content_2">Get promoted to more users</string>
    <string name="txt_verified_way_1">To get verified, you have to post the following post on your FB wall through our system</string>
	<string name="txt_verified_way_2">Alternatively, you can {{b}}get verified by emailing{{/b}} us a {{b}}screenshot of your profile + a copy of your passport{{/b}} from the email account you use for Facebook to {{b}}verification@oakclub.com{{/b}}</string>
	<string name="txt_verified_continue">Continue</string>
    <string name="txt_verified_skip">Skip</string>
   <string name="txt_got_verified">I Got Verified!</string>
   <string name="txt_oakclub_page">OakClub.com</string>
    <string name="txt_sample_post">
        I have just joined OakClub - a cool app to make new connections. Check it out!
    </string>
    <string name="txt_get_verified_now">Get Verified Now!</string>
    <string name="txt_dear">Dear</string>
     <string name="txt_force_verified">
	Your account has been selected for a mandatory verification because of some issues concerning with compliance to our {{b}}Terms and Conditions{{/b}}. We understand that mandatory verification might be inconvenient. But we strive to make OakClub as a safe an environment for our users as possible. So please follow these steps below and complete the verification either by Facebook post or sending your identification documents by email. Thanks a lot and sorry again for all inconvenience caused	
     </string>
    <string name="txt_oakclub_team">The OakClub team.</string>
    <string name="txt_not_complete_verified">Verification could not be completed</string>
    <string name="txt_try_again">Please try again</string>
    <string name="ok">OK</string>
    <string name="txt_thank_you">Thank you!</string>
    <string name="txt_op">Oooooops!</string>
    <string name="txt_got_it">Ok, I understand</string>
    <string name="txt_take_to_snapshot">Take me to Snapshot</string>
    <string name="txt_verified_member">You are now a verified member</string>
    <string name="txt_verified_via_email_title">Get Verified Via Email</string>
    <string name="txt_verification">Verification</string>
    <string name="txt_vip_title">Become a VIP</string>
     <string name="txt_vip_purchase_title">Purchasing</string>
    <string name="txt_vip_benefits_title_1">RiseUp during subscription time</string>
    <string name="txt_vip_benefits_title_2">Immediate chat</string>
    <string name="txt_vip_benefits_title_3">Prioritize msg in chat window</string>
    <string name="txt_vip_benefits_title_4">Vip exclusive emoticons and stickerse</string>
    <string name="txt_vip_benefits_title_5">Frame and Crown\n(You can choose to disable this option)</string>
    <string name="txt_vip_benefits_1">Prioritize you on Snapshots queue. More people will see you.</string>
    <string name="txt_vip_benefits_2">Why waiting? Chat immediately with the ones you like.</string>
    <string name="txt_vip_benefits_3">VIP messages appears before other users.</string>
    <string name="txt_vip_benefits_4">Express it in your own ways. Tons of emoticons and stickers for VIPs only.</string>
    <string name="txt_vip_benefits_5">Looks fabulous with golden frame and VIP crown.</string>
    <string name="txt_month">{{b}}%s month{{/b}}</string>
    <string name="txt_months">{{b}}%s months{{/b}}</string>
    <string name="txt_price_per_month">{{b}}%s / mo{{/b}}</string>
    <string name="txt_get_vip_btn">Get VIP Package Now</string>
    <string name="txt_int_app_product_title">{{b}}%s{{/b}}</string>
    <string name="txt_total_bill">Total: %s</string>
    <string name="txt_save">SAVE {{b}}%s%%{{/b}}</string>
    <string name="txt_vip_room">VIP Room</string>
    <string name="txt_load_in_app_error">Can\'t load InApp Purchase</string>
    <string name="txt_rate_app">Rate OakClub</string>
    <string name="txt_content_rate_app">Please take 1 minute to let us know what you think about OakClub. Thank you for your support!</string>
    <string name="txt_leave_us_a_message">Leave us a message</string>
    <string name="txt_ask_me_later">Aske me later</string>
    <string name="txt_chat_match_content">You matched with %s</string>
    <string name="txt_start_conversations_are_awkward_but_not_at_OakClub">Start conversations are awkward, but not at OakClub</string>
    <string name="txt_you_rated_snapshots">You rated %d SnapShots. Sharing is caring. Invite your friends!</string>
    <string name="txt_purchase_error">Error purchasing. Authenticity verification failed.</string>
    <string name="txt_you_VIP_member">You Are Now Already A</string>
    <string name="txt_VIP_member">VIP Member</string>
    <string name="txt_meet_more_people">Meet More People</string>
     <string name="txt_VIP_member_content">Start a conversation with everyone!\nThe more people you chat with, the more likely you are to find the right match!</string>
    <string name="txt_purchase_confirmed">Your Purchase Has Been Confirmed</string>
    <string name="txt_btn_back">Back</string>
    <string name="txt_purchase_confirmed_transaction_id">Transaction ID: %s</string>
    <string name="txt_share_on_facebook">Share On Facebook</string>
    <string name="txt_email_to_friend">Email To Your Friends</string>
    <string name="txt_store">Store</string>
    <string name="txt_oakclub_store">OakClub Store</string>
    <string name="txt_update_new_version_title">Update new version</string>
    <string name="txt_update_new_version_message">Please update new version to continue use app.</string>
    <string name="txt_wifi_enabled">Wifi enabled</string>
    <string name="txt_mobile_data_enabled">Mobile data enabled</string>
    <string name="txt_not_connected_to_internet">Not connected to Internet</string>
    <string name="txt_warning_uppercase">WARNING!</string>
    <string name="txt_account_reviewed">YOUR ACCOUNT IS BEING REVIEWED</string>
    <string name="txt_disable_reasons">Due to one of following reasons:</string>
    <string name="txt_disable_reason_1">Under 17 years of age</string>
    <string name="txt_disable_reason_2">Under 50 Facebook friends</string>
    <string name="txt_disable_reason_3">Unqualified profile pictures</string>
    <string name="txt_disable_reason_4">Have only one profile pictures</string>
    <string name="txt_disable_info">A good profile pictures show &#190; of full face, you can change your avatars and upload more pictures. Then we will notice &#38; complete your membership review process.</string>
    <string name="txt_disable_change_avatar">Change Avatar</string>
    <string name="txt_disable_update_friends">Update Friends</string>
    <string name="txt_disable_upload_video">Upload Video</string>
    <string name="txt_disable_upload_pictures">Upload Pictures</string>
    <string name="txt_coming_soon">Coming soon</string>
    <string name="build_version">Version 1.6.1</string>
    <string-array name="months_list">
        <item>1</item>
        <item>6</item>
        <item>12</item>
    </string-array>
    <string-array name="price_list">
        <item>29.98</item>
        <item>20.00</item>
        <item>16.66</item>
        <item>10.00</item>
    </string-array>
    <string-array name="bill_list">
        <item>29.98</item>
        <item>59.99</item>
        <item>99.98</item>
        <item>119.98</item>
    </string-array>
    <string-array name="save_list">
        <item>33</item>
        <item>44</item>
        <item>55</item>
    </string-array>
    <string-array name="gender_list">
        <item>@string/txt_female</item>
        <item>@string/txt_male</item>
    </string-array>
    <string-array name="interested_in_list">
        <item>@string/txt_male</item>
        <item>@string/txt_female</item>
        <item>@string/txt_both</item>
    </string-array>
    <string-array name="interested_in_search_list">
        <item>@string/txt_new_people</item>
        <item>@string/txt_friends</item>
        <item>@string/txt_friends_of_friends</item>
    </string-array>
    <string-array name="search_purpose_list">
        <item>@string/txt_new_friend</item>
        <item>@string/txt_chat</item>
        <item>@string/txt_date</item>
    </string-array>
    <string-array name="menu_text_list">
        <item>@string/txt_profile</item>
        <item>@string/txt_snapshot</item>
        <item>@string/txt_settings</item>
        <item>@string/txt_invite_friend</item>
        <item>@string/txt_get_verified_now</item>
        <item>@string/txt_vip_room</item>
    </string-array>
    <string-array name="report_user_reasons">
        <item>@string/txt_report_user_spam</item>
        <item>@string/txt_report_user_uncomfort</item>
        <item>@string/txt_report_user_other</item>
    </string-array>
    <string-array name="language_list">
        <item>@string/txt_language_en</item>
        <item>@string/txt_language_vi</item>
        <item>@string/txt_language_de</item>
        <item>@string/txt_language_id</item>
        <item>@string/txt_language_th</item>
        <item>@string/txt_language_ru</item>
        <item>@string/txt_language_es</item>
        <item>@string/txt_language_fr</item>
        <item>@string/txt_language_tr</item>
        <item>@string/txt_language_da</item>
        <item>@string/txt_language_nb</item>
        <item>@string/txt_language_sv</item>
        <item>@string/txt_language_ro</item>
        <item>@string/txt_language_pl</item>
        <item>@string/txt_language_bg</item>
        <item>@string/txt_language_hu</item>
        <item>@string/txt_language_hr</item>
        <item>@string/txt_language_el</item>
        <item>@string/txt_language_nl</item>
        <item>@string/txt_language_ar</item>
        <item>@string/txt_language_ko</item>
        <item>@string/txt_language_sw</item>
        <item>@string/txt_language_ph</item>
        <item>@string/txt_language_hi</item>
    </string-array>
    <string name="txt_language_en">English</string>
    <string name="txt_language_vi">Tiếng Việt</string>
    <string name="txt_language_de">Deutsch</string>
    <string name="txt_language_id">Bahasa Indonesia</string>
    <string name="txt_language_th">ภาษาไทย</string>
    <string name="txt_language_ru">Русский язык</string>
    <string name="txt_language_es">Español</string>
    <string name="txt_language_fr">Français</string>
    <string name="txt_language_tr">Türkce</string>
    <string name="txt_language_da">Dansk</string>
    <string name="txt_language_nb">Norsk</string>
    <string name="txt_language_sv">Svenska</string>
    <string name="txt_language_ro">Limba română</string>
    <string name="txt_language_pl">Język polski</string>
    <string name="txt_language_bg">Български език</string>
    <string name="txt_language_hu">Magyar</string>
    <string name="txt_language_hr">Hrvatski jezik</string>
    <string name="txt_language_el">Ελληνικά</string>
    <string name="txt_language_nl">Nederlands</string>
    <string name="txt_language_ar">العربية</string>
    <string name="txt_language_ko">한국어</string>
    <string name="txt_language_sw">Swahili</string>
    <string name="txt_language_ph">Tagalog</string>
    <string name="txt_language_hi">देवनागरी लिप</string>
</resources>