<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vip_base" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/vip_base"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/vip_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/txt_VIP_member"
            android:src="@drawable/vip_lgo" />

        <com.oakclub.android.view.TextViewWithFont
            android:id="@+id/get_vip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/txt_vip_title"
            android:textColor="@color/GoldLight"
            android:textSize="30sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawableLeft="@drawable/tick"
                android:drawablePadding="5dp"
                android:text="@string/txt_vip_benefits_title_1"
                android:textColor="@color/Gold"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:text="@string/txt_vip_benefits_1"
                android:textColor="@color/Black"
                android:textSize="12sp" />

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawableLeft="@drawable/tick"
                android:drawablePadding="5dp"
                android:text="@string/txt_vip_benefits_title_2"
                android:textColor="@color/Gold"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:text="@string/txt_vip_benefits_2"
                android:textColor="@color/Black"
                android:textSize="12sp" />

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawableLeft="@drawable/tick"
                android:drawablePadding="5dp"
                android:text="@string/txt_vip_benefits_title_3"
                android:textColor="@color/Gold"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:text="@string/txt_vip_benefits_3"
                android:textColor="@color/Black"
                android:textSize="12sp" />

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawableLeft="@drawable/tick"
                android:drawablePadding="5dp"
                android:text="@string/txt_vip_benefits_title_4"
                android:textColor="@color/Gold"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:text="@string/txt_vip_benefits_4"
                android:textColor="@color/Black"
                android:textSize="12sp" />

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:drawableLeft="@drawable/tick"
                android:drawablePadding="5dp"
                android:text="@string/txt_vip_benefits_title_5"
                android:textColor="@color/Gold"
                android:textSize="13sp"
                android:textStyle="bold" />

            <com.oakclub.android.view.TextViewWithFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="5dp"
                android:text="@string/txt_vip_benefits_5"
                android:textColor="@color/Black"
                android:textSize="12sp" />

          
        </LinearLayout>

        <Button
            android:id="@+id/btn_get_vip"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gold_button_selector"
            android:drawableLeft="@drawable/vip_icon"
            android:drawablePadding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingLeft ="10dp"
            android:paddingRight ="10dp"
            android:text="@string/txt_get_vip_btn"
            android:textColor="@color/White" />

    </LinearLayout>

</ScrollView>